Closed Bug 270797 Opened 21 years ago Closed 21 years ago

###!!! ASSERTION: null data pointer: 'Not Reached', file r:\mozilla\xpcom\string\src\nsTSubstring.cpp, line 599

Categories

(SeaMonkey :: MailNews: Account Configuration, defect)

x86
Windows XP
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: mcsmurf)

Details

(Keywords: assertion)

Attachments

(2 obsolete files)

###!!! ASSERTION: null data pointer: 'Not Reached', file r:\mozilla\xpcom\string\src\nsTSubstring.cpp, line 599 Break: at file r:\mozilla\xpcom\string\src\nsTSubstring.cpp, line 599 xpcom_core.dll!nsDebug::Assertion(const char * aStr=0x00396688, const char * aExpr=0x00388f84, const char * aFile=0x0039669c, int aLine=0x00000257) Line 109 C++ > xpcom_core.dll!nsCSubstring::Equals(const char * data=0x00000000) Line 600 C++ msgbase.dll!nsMsgAccountManager::InternalFindServer(const char * username=0x015f6088, const char * hostname=0x00000000, const char * type=0x015f5eb0, int useRealSetting=0x00000000, nsIMsgIncomingServer * * aResult=0x0012d864) Line 1906 + 0x1b C++ msgbase.dll!nsMsgAccountManager::FindServer(const char * username=0x015f6088, const char * hostname=0x00000000, const char * type=0x015f5eb0, nsIMsgIncomingServer * * aResult=0x0012d864) Line 1950 C++ msgbase.dll!nsMsgAccountManager::GetLocalFoldersServer(nsIMsgIncomingServer * * aServer=0x0012d864) Line 2421 C++ xpcom_core.dll!XPTC_InvokeByIndex(nsISupports * that=0x03062f58, unsigned int methodIndex=0x0000001d, unsigned int paramCount=0x00000001, nsXPTCVariant * params=0x0012d864) Line 102 C++ nsMsgAccountManager::GetLocalFoldersServer rv = FindServer("nobody",nsnull,"none",aServer); this code has been this way since the beginning of time, but someone should fix it
timeless, mcsmurf says you're working on this. I think it's sufficient to add hostname && username && type to the front of the "if" at http://lxr.mozilla.org/seamonkey/source/mailnews/base/src/nsMsgAccountManager.cpp#1907
Attached patch Patch (obsolete) — Splinter Review
These were the only broken callers i found.
Attachment #166461 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 166461 [details] [diff] [review] Patch OK, so when reviewing the original code I didn't spot that Equals isn't allowed null pointers so it's InternalFindServer that needs to be fixed.
Attachment #166461 - Flags: review?(neil.parkwaycc.co.uk) → review-
Attached patch Patch 2 (obsolete) — Splinter Review
Attachment #166461 - Attachment is obsolete: true
Attachment #166577 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 166577 [details] [diff] [review] Patch 2 Although you didn't need to move useRealSetting...
Attachment #166577 - Flags: review?(neil.parkwaycc.co.uk) → review+
Attachment #166577 - Flags: superreview?(bienvenu)
Attachment #166577 - Flags: superreview?(bienvenu) → superreview+
Assignee: sspitzer → bugzilla
Product: Browser → Seamonkey
Comment on attachment 166577 [details] [diff] [review] Patch 2 mozilla/mailnews/base/src/nsMsgAccountManager.cpp 1.298
Attachment #166577 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: