Bug 270797 ###!!! ASSERTION: null data pointer: 'Not Reached', file r:\mozilla\xpcom\string\src\nsTSubstring.cpp, line 599 patch by bugzilla@mcsmurf.de r=neil sr=bienvenu